--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,7 +3,7 @@
 
 AllCops:
   DisplayCopNames: true
-  TargetRubyVersion: 2.2
+  TargetRubyVersion: 2.3
 
   Include:
     - '**/Rakefile'
@@ -27,8 +27,8 @@ AllCops:
     - 'spec/react_on_rails/dummy-for-generators/**/*'
     - 'spec/dummy/Procfile.*'
     - 'spec/dummy/bin/**/*'
-    - 'spec/dummy/client/node_modules/**/*'
-    - 'spec/dummy/client/node_modules/**/.*'
+    - 'spec/dummy/node_modules/**/*'
+    - 'spec/dummy/node_modules/**/.*'
     - 'spec/dummy_no_webpacker/Procfile.*'
     - 'spec/dummy_no_webpacker/bin/**/*'
     - 'spec/dummy_no_webpacker/client/node_modules/**/*'
@@ -59,10 +59,11 @@ Lint/AssignmentInCondition:
   Exclude:
     - 'spec/dummy/bin/spring'
 
-Lint/HandleExceptions:
+Lint/SuppressedException:
   Exclude:
     - 'spec/dummy/bin/rails'
     - 'spec/dummy/bin/rake'
+    - 'spec/react_on_rails/test_helper/webpack_assets_compiler_spec.rb'
 
 Metrics/AbcSize:
   Max: 28
@@ -91,4 +92,4 @@ Style/GlobalVars:
     - 'spec/dummy/config/environments/development.rb'
 
 Style/FrozenStringLiteralComment:
-  EnforcedStyle: when_needed
+  EnforcedStyle: always
